# rust-backend

./: Cargo.toml  DDID_zkp.drawio  rust-backend.rar
src/: data_preprocess.rs  main.rs  sol-connect.rs  sol_connect.rs  study.csv  traning.rs  traning_example.rs  wallet-keypair.json
