[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"
respository = "https://github.com/Noban130/rust-backend"
[dependencies]
linfa = { version = "0.7", features = ["openblas-system"] }
linfa-linear = "0.7"
rand = "0.8"
solana-client = "2.0"
solana-sdk = "2.0"
csv = "1.1"
tokio = {version = "1", features = ["full"]}