[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"
# respository = "https://github.com/Noban130/rust-backend"

[dependencies]
linfa = { version = "0.7"}
linfa-linear = "0.7"
csv = "1.1"
tokio = {version = "1", features = ["full"]}
rand = "0.8"
ndarray = "0.16.1"
solana-client = "2.0"
solana-sdk = "2.0"
bincode = "1.3.3"