[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"
# respository = "https://github.com/Noban130/rust-backend"

[dependencies]
linfa = { version = "0.7"}
linfa-linear = "0.7"
csv = "1.1"
tokio = {version = "1", features = ["full"]}
rand = "0.8"
ndarray = "0.16.1"
anchor-client = { version = "0.30.1 ", features = ["async"] }
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "1.4.0"
serde_json = "1.0.117"
solana-address-lookup-table-program = "1.18.15"
solana-client = "1.18.9"
solana-sdk = "1.18.9"
solana-transaction-status = "1.18.15"
solana-program-client = "0.1.0"
